{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 574,
  "lineage": "eb3e3c70-8478-ca3f-10c6-af917414349d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "newyork_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:891377015455:transit-gateway/tgw-029e50f0230e69600",
            "association_default_route_table_id": "tgw-rtb-0be9f57176cf9cc1f",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit Gateway in New York (Spoke)",
            "dns_support": "enable",
            "id": "tgw-029e50f0230e69600",
            "multicast_support": "disable",
            "owner_id": "891377015455",
            "propagation_default_route_table_id": "tgw-rtb-0be9f57176cf9cc1f",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "newyork-tgw"
            },
            "tags_all": {
              "Name": "newyork-tgw"
            },
            "vpn_ecmp_support": "enable"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tokyo_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:ap-northeast-1:891377015455:transit-gateway/tgw-04b5e653d11d57c0b",
            "association_default_route_table_id": "tgw-rtb-01fb82b8cbea0f3fb",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit Gateway in Tokyo (Hub)",
            "dns_support": "enable",
            "id": "tgw-04b5e653d11d57c0b",
            "multicast_support": "disable",
            "owner_id": "891377015455",
            "propagation_default_route_table_id": "tgw-rtb-01fb82b8cbea0f3fb",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "tokyo-tgw"
            },
            "tags_all": {
              "Name": "tokyo-tgw"
            },
            "vpn_ecmp_support": "enable"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_peering_attachment",
      "name": "newyork_to_tokyo_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-attach-049ffa68c1ecdcacb",
            "peer_account_id": "891377015455",
            "peer_region": "ap-northeast-1",
            "peer_transit_gateway_id": "tgw-04b5e653d11d57c0b",
            "state": "available",
            "tags": {
              "Name": "newyork-to-tokyo-peering"
            },
            "tags_all": {
              "Name": "newyork-to-tokyo-peering"
            },
            "transit_gateway_id": "tgw-029e50f0230e69600"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw",
            "aws_ec2_transit_gateway.tokyo_tgw"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_peering_attachment_accepter",
      "name": "tokyo_accepts_newyork_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-attach-049ffa68c1ecdcacb",
            "peer_account_id": "891377015455",
            "peer_region": "us-east-1",
            "peer_transit_gateway_id": "tgw-029e50f0230e69600",
            "tags": {
              "Name": "tokyo-accepts-newyork"
            },
            "tags_all": {
              "Name": "tokyo-accepts-newyork"
            },
            "transit_gateway_attachment_id": "tgw-attach-049ffa68c1ecdcacb",
            "transit_gateway_id": "tgw-04b5e653d11d57c0b"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw",
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_ec2_transit_gateway_peering_attachment.newyork_to_tokyo_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "newyork_to_tokyo_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "172.18.0.0/16",
            "id": "tgw-rtb-08138452d933c9c50_172.18.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-049ffa68c1ecdcacb",
            "transit_gateway_route_table_id": "tgw-rtb-08138452d933c9c50"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw",
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_ec2_transit_gateway_peering_attachment.newyork_to_tokyo_peering",
            "aws_ec2_transit_gateway_peering_attachment_accepter.tokyo_accepts_newyork_peering",
            "aws_ec2_transit_gateway_route_table.newyork_tgw_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "tokyo_to_newyork_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "172.19.0.0/16",
            "id": "tgw-rtb-0b2a6f3e86cead515_172.19.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-049ffa68c1ecdcacb",
            "transit_gateway_route_table_id": "tgw-rtb-0b2a6f3e86cead515"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw",
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_ec2_transit_gateway_peering_attachment.newyork_to_tokyo_peering",
            "aws_ec2_transit_gateway_peering_attachment_accepter.tokyo_accepts_newyork_peering",
            "aws_ec2_transit_gateway_route_table.tokyo_tgw_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "newyork_tgw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377015455:transit-gateway-route-table/tgw-rtb-08138452d933c9c50",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-08138452d933c9c50",
            "tags": {
              "Name": "newyork-tgw-rt"
            },
            "tags_all": {
              "Name": "newyork-tgw-rt"
            },
            "transit_gateway_id": "tgw-029e50f0230e69600"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tokyo_tgw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377015455:transit-gateway-route-table/tgw-rtb-0b2a6f3e86cead515",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0b2a6f3e86cead515",
            "tags": {
              "Name": "tokyo-tgw-rt"
            },
            "tags_all": {
              "Name": "tokyo-tgw-rt"
            },
            "transit_gateway_id": "tgw-04b5e653d11d57c0b"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tokyo_tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "newyork_tgw_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-08138452d933c9c50_tgw-attach-0bfd242ac4a03f437",
            "replace_existing_association": false,
            "resource_id": "vpc-0f7677ebe95c66171",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0bfd242ac4a03f437",
            "transit_gateway_route_table_id": "tgw-rtb-08138452d933c9c50"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw",
            "aws_ec2_transit_gateway_route_table.newyork_tgw_rt",
            "aws_ec2_transit_gateway_vpc_attachment.newyork_tgw_attachment",
            "aws_subnet.newyork-private-subnet-1a",
            "aws_subnet.newyork-private-subnet-1b",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tokyo_tgw_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0b2a6f3e86cead515_tgw-attach-0a4ef1db935497202",
            "replace_existing_association": false,
            "resource_id": "vpc-0633f5cea1e6f2bef",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0a4ef1db935497202",
            "transit_gateway_route_table_id": "tgw-rtb-0b2a6f3e86cead515"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_ec2_transit_gateway_route_table.tokyo_tgw_rt",
            "aws_ec2_transit_gateway_vpc_attachment.tokyo_tgw_attachment",
            "aws_subnet.tokyo-private-subnet-1a",
            "aws_subnet.tokyo-private-subnet-1d",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "newyork_tgw_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0bfd242ac4a03f437",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-09dcf6a94b05ff178",
              "subnet-0ffe888ffca5a68f2"
            ],
            "tags": {
              "Name": "newyork-tgw-attachment"
            },
            "tags_all": {
              "Name": "newyork-tgw-attachment"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-029e50f0230e69600",
            "vpc_id": "vpc-0f7677ebe95c66171",
            "vpc_owner_id": "891377015455"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw",
            "aws_subnet.newyork-private-subnet-1a",
            "aws_subnet.newyork-private-subnet-1b",
            "aws_vpc.newyork-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tokyo_tgw_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0a4ef1db935497202",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-04a74d8e2a2cab33c",
              "subnet-0bef8118878350ab2"
            ],
            "tags": {
              "Name": "tokyo-tgw-attachment"
            },
            "tags_all": {
              "Name": "tokyo-tgw-attachment"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-04b5e653d11d57c0b",
            "vpc_id": "vpc-0633f5cea1e6f2bef",
            "vpc_owner_id": "891377015455"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_subnet.tokyo-private-subnet-1a",
            "aws_subnet.tokyo-private-subnet-1d",
            "aws_vpc.tokyo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "australia-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009d97ac178787801",
            "arn": "arn:aws:ec2:ap-southeast-2:891377015455:elastic-ip/eipalloc-009d97ac178787801",
            "association_id": "eipassoc-0f83706e075fb22a3",
            "domain": "vpc",
            "id": "eipalloc-009d97ac178787801",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-07658870adcba39ce",
            "private_dns": "ip-172-22-1-161.ap-southeast-2.compute.internal",
            "private_ip": "172.22.1.161",
            "public_dns": "ec2-3-106-105-98.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.106.105.98",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "australia-nat"
            },
            "tags_all": {
              "Name": "australia-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "california-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014ee5a4301aff24c",
            "arn": "arn:aws:ec2:us-west-1:891377015455:elastic-ip/eipalloc-014ee5a4301aff24c",
            "domain": "vpc",
            "id": "eipalloc-014ee5a4301aff24c",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-183-103-143.us-west-1.compute.amazonaws.com",
            "public_ip": "54.183.103.143",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "california-nat"
            },
            "tags_all": {
              "Name": "california-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "hongkong-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07455061a31b8dd01",
            "arn": "arn:aws:ec2:ap-east-1:891377015455:elastic-ip/eipalloc-07455061a31b8dd01",
            "association_id": "eipassoc-0a837ce10885ac991",
            "domain": "vpc",
            "id": "eipalloc-07455061a31b8dd01",
            "network_border_group": "ap-east-1",
            "network_interface": "eni-0590d83960df6b61a",
            "private_dns": "ip-172-23-1-106.ap-east-1.compute.internal",
            "private_ip": "172.23.1.106",
            "public_dns": "ec2-43-198-52-49.ap-east-1.compute.amazonaws.com",
            "public_ip": "43.198.52.49",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hongkong-nat"
            },
            "tags_all": {
              "Name": "hongkong-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "london-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0358eea374941f67e",
            "arn": "arn:aws:ec2:eu-west-2:891377015455:elastic-ip/eipalloc-0358eea374941f67e",
            "association_id": "eipassoc-0325c06cfef3a0f81",
            "domain": "vpc",
            "id": "eipalloc-0358eea374941f67e",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0789121893742d76a",
            "private_dns": "ip-172-20-1-129.eu-west-2.compute.internal",
            "private_ip": "172.20.1.129",
            "public_dns": "ec2-3-10-112-40.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.112.40",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "london-nat"
            },
            "tags_all": {
              "Name": "london-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "newyork-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06699c329afdfaa9c",
            "arn": "arn:aws:ec2:us-east-1:891377015455:elastic-ip/eipalloc-06699c329afdfaa9c",
            "association_id": "eipassoc-0449529d7bf23f4bc",
            "domain": "vpc",
            "id": "eipalloc-06699c329afdfaa9c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0dc1ed84ed5f72c99",
            "private_dns": "ip-172-19-1-155.ec2.internal",
            "private_ip": "172.19.1.155",
            "public_dns": "ec2-100-28-38-138.compute-1.amazonaws.com",
            "public_ip": "100.28.38.138",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "newyork-nat"
            },
            "tags_all": {
              "Name": "newyork-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "saopaulo-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084e20af5c5807900",
            "arn": "arn:aws:ec2:sa-east-1:891377015455:elastic-ip/eipalloc-084e20af5c5807900",
            "association_id": "eipassoc-0c2fa9974807077ca",
            "domain": "vpc",
            "id": "eipalloc-084e20af5c5807900",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-0d37fd20d75513c27",
            "private_dns": "ip-172-21-1-54.sa-east-1.compute.internal",
            "private_ip": "172.21.1.54",
            "public_dns": "ec2-54-94-137-145.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.94.137.145",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "saopaulo-nat"
            },
            "tags_all": {
              "Name": "saopaulo-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tokyo-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-095787ee5670b6ea0",
            "arn": "arn:aws:ec2:ap-northeast-1:891377015455:elastic-ip/eipalloc-095787ee5670b6ea0",
            "association_id": "eipassoc-0e86a7f127d21ed7e",
            "domain": "vpc",
            "id": "eipalloc-095787ee5670b6ea0",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0cf0b82839b69c71d",
            "private_dns": "ip-172-18-1-206.ap-northeast-1.compute.internal",
            "private_ip": "172.18.1.206",
            "public_dns": "ec2-52-195-129-218.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.195.129.218",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tokyo-nat"
            },
            "tags_all": {
              "Name": "tokyo-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tokyotest-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e783727d5f177699",
            "arn": "arn:aws:ec2:ap-northeast-1:891377015455:elastic-ip/eipalloc-0e783727d5f177699",
            "association_id": "eipassoc-09c1a81e4ecf43147",
            "domain": "vpc",
            "id": "eipalloc-0e783727d5f177699",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0eb2ef49344b7250a",
            "private_dns": "ip-172-26-4-25.ap-northeast-1.compute.internal",
            "private_ip": "172.26.4.25",
            "public_dns": "ec2-52-192-29-180.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.192.29.180",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tokyotest-nat"
            },
            "tags_all": {
              "Name": "tokyotest-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "australia-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377015455:internet-gateway/igw-01ccb612c6f3257ce",
            "id": "igw-01ccb612c6f3257ce",
            "owner_id": "891377015455",
            "tags": {
              "Name": "PROD-Australia-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Australia-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-013263bb6a00abef0"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "california-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:891377015455:internet-gateway/igw-0905d6c967096f7ed",
            "id": "igw-0905d6c967096f7ed",
            "owner_id": "891377015455",
            "tags": {
              "Name": "PROD-Califonia-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Califonia-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-054e8200544af02ab"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hongkong-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:891377015455:internet-gateway/igw-0084eb534224306b6",
            "id": "igw-0084eb534224306b6",
            "owner_id": "891377015455",
            "tags": {
              "Name": "PROD-Hongkong-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-08bf559094d3fb878"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "london-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377015455:internet-gateway/igw-05b7b0d5393f78231",
            "id": "igw-05b7b0d5393f78231",
            "owner_id": "891377015455",
            "tags": {
              "Name": "PROD-London-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-London-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-05ed4e1ff86501dfa"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "newyork-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377015455:internet-gateway/igw-06fdde9e79e1d31f0",
            "id": "igw-06fdde9e79e1d31f0",
            "owner_id": "891377015455",
            "tags": {
              "Name": "PROD-New York-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0f7677ebe95c66171"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "saopaulo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377015455:internet-gateway/igw-0a23094415d86d9b0",
            "id": "igw-0a23094415d86d9b0",
            "owner_id": "891377015455",
            "tags": {
              "Name": "PROD-Saup-Paulo-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0ff2d6be8de23a836"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tokyo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377015455:internet-gateway/igw-0f937aaedad55b537",
            "id": "igw-0f937aaedad55b537",
            "owner_id": "891377015455",
            "tags": {
              "Name": "PROD-Tokyo-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0633f5cea1e6f2bef"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tokyotest-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377015455:internet-gateway/igw-0d539278b7d116894",
            "id": "igw-0d539278b7d116894",
            "owner_id": "891377015455",
            "tags": {
              "Name": "TokyoTest_IG",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "TokyoTest_IG",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0af671a3780a305aa"
          },
          "dependencies": [
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "australia_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:891377015455:loadbalancer/app/australia-load-balancer/1a73fe1bf76b76b2",
            "arn_suffix": "app/australia-load-balancer/1a73fe1bf76b76b2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "australia-load-balancer-575759030.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:891377015455:loadbalancer/app/australia-load-balancer/1a73fe1bf76b76b2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "australia-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0115deb419306e3a8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0808456457990ecc1"
              },
              {
                "subnet_id": "subnet-0dfd8f1d84d941da7"
              }
            ],
            "subnets": [
              "subnet-0808456457990ecc1",
              "subnet-0dfd8f1d84d941da7"
            ],
            "tags": {
              "Name": "AustraliaLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "AustraliaLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-013263bb6a00abef0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_security_group.australia-SG02-LB01",
            "aws_subnet.australia-public-subnet-2a",
            "aws_subnet.australia-public-subnet-2b",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "california_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:891377015455:loadbalancer/app/california-load-balancer/da2520ec62cdaf11",
            "arn_suffix": "app/california-load-balancer/da2520ec62cdaf11",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "california-load-balancer-1882255077.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:891377015455:loadbalancer/app/california-load-balancer/da2520ec62cdaf11",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "california-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-002f1da12f5033988"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00a4fcf08608fdf2b"
              },
              {
                "subnet_id": "subnet-011c98a134061e37a"
              }
            ],
            "subnets": [
              "subnet-00a4fcf08608fdf2b",
              "subnet-011c98a134061e37a"
            ],
            "tags": {
              "Name": "CaliforniaLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "CaliforniaLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-054e8200544af02ab",
            "xff_header_processing_mode": "append",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.california-SG02-LB01",
            "aws_subnet.california-public-subnet-1a",
            "aws_subnet.california-public-subnet-1b",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "hongkong_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-east-1:891377015455:loadbalancer/app/hongkong-load-balancer/cdd1ebeab14de1e2",
            "arn_suffix": "app/hongkong-load-balancer/cdd1ebeab14de1e2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "hongkong-load-balancer-1940623298.ap-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-east-1:891377015455:loadbalancer/app/hongkong-load-balancer/cdd1ebeab14de1e2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hongkong-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00bfcee7bd9545207"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0358b9addd62bbfc8"
              },
              {
                "subnet_id": "subnet-0ebe52539547824af"
              }
            ],
            "subnets": [
              "subnet-0358b9addd62bbfc8",
              "subnet-0ebe52539547824af"
            ],
            "tags": {
              "Name": "HongKongLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "HongKongLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-08bf559094d3fb878",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3DQVH9N71FHZ0"
          },
          "dependencies": [
            "aws_security_group.hongkong-SG02-LB01",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_subnet.hongkong-public-subnet-1b",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "london_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:891377015455:loadbalancer/app/london-load-balancer/1f6525d0ca61747c",
            "arn_suffix": "app/london-load-balancer/1f6525d0ca61747c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "london-load-balancer-2038832135.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:891377015455:loadbalancer/app/london-load-balancer/1f6525d0ca61747c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "london-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05862091b2571d24f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0360c81fc81758e69"
              },
              {
                "subnet_id": "subnet-0fa049fa26863893c"
              }
            ],
            "subnets": [
              "subnet-0360c81fc81758e69",
              "subnet-0fa049fa26863893c"
            ],
            "tags": {
              "Name": "LondonLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "LondonLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-05ed4e1ff86501dfa",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.london-SG02-LB01",
            "aws_subnet.london-public-subnet-2a",
            "aws_subnet.london-public-subnet-2b",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "newyork_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377015455:loadbalancer/app/newyork-load-balancer/b9c1fe0e3f8a9b35",
            "arn_suffix": "app/newyork-load-balancer/b9c1fe0e3f8a9b35",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "newyork-load-balancer-1308323.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377015455:loadbalancer/app/newyork-load-balancer/b9c1fe0e3f8a9b35",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "newyork-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07dd3fe4a4eb5b3f4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0240fbebee16e8668"
              },
              {
                "subnet_id": "subnet-0b599cb2d97f1b5e9"
              }
            ],
            "subnets": [
              "subnet-0240fbebee16e8668",
              "subnet-0b599cb2d97f1b5e9"
            ],
            "tags": {
              "Name": "NewYorkLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "NewYorkLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0f7677ebe95c66171",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.newyork-SG02-LB01",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_subnet.newyork-public-subnet-1b",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "saopaulo_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:891377015455:loadbalancer/app/saopaulo-load-balancer/9af723924648da0d",
            "arn_suffix": "app/saopaulo-load-balancer/9af723924648da0d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "saopaulo-load-balancer-670679230.sa-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:sa-east-1:891377015455:loadbalancer/app/saopaulo-load-balancer/9af723924648da0d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "saopaulo-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02a6c3e1a21144221"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-036615ff2e0ccf934"
              },
              {
                "subnet_id": "subnet-05559927749ecc1ff"
              }
            ],
            "subnets": [
              "subnet-036615ff2e0ccf934",
              "subnet-05559927749ecc1ff"
            ],
            "tags": {
              "Name": "SaoPauloLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "SaoPauloLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0ff2d6be8de23a836",
            "xff_header_processing_mode": "append",
            "zone_id": "Z2P70J7HTTTPLU"
          },
          "dependencies": [
            "aws_security_group.saopaulo-SG02-LB01",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_subnet.saopaulo-public-subnet-1c",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tokyo_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:891377015455:loadbalancer/app/tokyo-load-balancer/4a8f85be258a6a65",
            "arn_suffix": "app/tokyo-load-balancer/4a8f85be258a6a65",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tokyo-load-balancer-226427735.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:891377015455:loadbalancer/app/tokyo-load-balancer/4a8f85be258a6a65",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tokyo-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00c535a2bb5333243"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-086c4615be619ab9b"
              },
              {
                "subnet_id": "subnet-0f54bae4d8c14f26b"
              }
            ],
            "subnets": [
              "subnet-086c4615be619ab9b",
              "subnet-0f54bae4d8c14f26b"
            ],
            "tags": {
              "Name": "TokyoLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "TokyoLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0633f5cea1e6f2bef",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.tokyo-SG02-LB01",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_subnet.tokyo-public-subnet-1d",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "australia-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:891377015455:listener/app/australia-load-balancer/1a73fe1bf76b76b2/049910be55fa0c97",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:891377015455:targetgroup/australia-target-group/d9e4b99ef3ad1ed8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:891377015455:listener/app/australia-load-balancer/1a73fe1bf76b76b2/049910be55fa0c97",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:891377015455:loadbalancer/app/australia-load-balancer/1a73fe1bf76b76b2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.australia_alb",
            "aws_lb_target_group.australia_tg",
            "aws_security_group.australia-SG02-LB01",
            "aws_subnet.australia-public-subnet-2a",
            "aws_subnet.australia-public-subnet-2b",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "california-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:891377015455:listener/app/california-load-balancer/da2520ec62cdaf11/46f5ab5d7bf7faab",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:891377015455:targetgroup/california-target-group/b1a371bc1e0fa86f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:891377015455:listener/app/california-load-balancer/da2520ec62cdaf11/46f5ab5d7bf7faab",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:891377015455:loadbalancer/app/california-load-balancer/da2520ec62cdaf11",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.california_alb",
            "aws_lb_target_group.california_tg",
            "aws_security_group.california-SG02-LB01",
            "aws_subnet.california-public-subnet-1a",
            "aws_subnet.california-public-subnet-1b",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "hongkong-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-east-1:891377015455:listener/app/hongkong-load-balancer/cdd1ebeab14de1e2/199d8a4791478bfe",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-east-1:891377015455:targetgroup/hongkong-target-group/b1724e9fb4e4be0b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-east-1:891377015455:listener/app/hongkong-load-balancer/cdd1ebeab14de1e2/199d8a4791478bfe",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-east-1:891377015455:loadbalancer/app/hongkong-load-balancer/cdd1ebeab14de1e2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.hongkong_alb",
            "aws_lb_target_group.hongkong_tg",
            "aws_security_group.hongkong-SG02-LB01",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_subnet.hongkong-public-subnet-1b",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "london-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:891377015455:listener/app/london-load-balancer/1f6525d0ca61747c/fc739d05bc9a6607",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:891377015455:targetgroup/london-target-group/4c8b883f44460421",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:891377015455:listener/app/london-load-balancer/1f6525d0ca61747c/fc739d05bc9a6607",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:891377015455:loadbalancer/app/london-load-balancer/1f6525d0ca61747c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.london_alb",
            "aws_lb_target_group.london_tg",
            "aws_security_group.london-SG02-LB01",
            "aws_subnet.london-public-subnet-2a",
            "aws_subnet.london-public-subnet-2b",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "newyork-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377015455:listener/app/newyork-load-balancer/b9c1fe0e3f8a9b35/ef43804e80703830",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377015455:targetgroup/newyork-target-group/bf7e51252a07b5df",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377015455:listener/app/newyork-load-balancer/b9c1fe0e3f8a9b35/ef43804e80703830",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:891377015455:loadbalancer/app/newyork-load-balancer/b9c1fe0e3f8a9b35",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.newyork_alb",
            "aws_lb_target_group.newyork_tg",
            "aws_security_group.newyork-SG02-LB01",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_subnet.newyork-public-subnet-1b",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "saopaulo-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:891377015455:listener/app/saopaulo-load-balancer/9af723924648da0d/f0c2748aaef5b70d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:891377015455:targetgroup/saopaulo-target-group/c6323014db70cf7a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:891377015455:listener/app/saopaulo-load-balancer/9af723924648da0d/f0c2748aaef5b70d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:sa-east-1:891377015455:loadbalancer/app/saopaulo-load-balancer/9af723924648da0d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.saopaulo_alb",
            "aws_lb_target_group.saopaulo_tg",
            "aws_security_group.saopaulo-SG02-LB01",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_subnet.saopaulo-public-subnet-1c",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tokyo-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:891377015455:listener/app/tokyo-load-balancer/4a8f85be258a6a65/af7e68006644c7d2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:891377015455:targetgroup/tokyo-target-group/fd399e49f7ca14aa",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:891377015455:listener/app/tokyo-load-balancer/4a8f85be258a6a65/af7e68006644c7d2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:891377015455:loadbalancer/app/tokyo-load-balancer/4a8f85be258a6a65",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.tokyo_alb",
            "aws_lb_target_group.tokyo_tg",
            "aws_security_group.tokyo-SG02-LB01",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_subnet.tokyo-public-subnet-1d",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "australia_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:891377015455:targetgroup/australia-target-group/d9e4b99ef3ad1ed8",
            "arn_suffix": "targetgroup/australia-target-group/d9e4b99ef3ad1ed8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:891377015455:targetgroup/australia-target-group/d9e4b99ef3ad1ed8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:891377015455:loadbalancer/app/australia-load-balancer/1a73fe1bf76b76b2"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "australia-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "AustraliaTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "AustraliaTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-013263bb6a00abef0"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "california_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:891377015455:targetgroup/california-target-group/b1a371bc1e0fa86f",
            "arn_suffix": "targetgroup/california-target-group/b1a371bc1e0fa86f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:891377015455:targetgroup/california-target-group/b1a371bc1e0fa86f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "california-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "CaliforniaTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "CaliforniaTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-054e8200544af02ab"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "hongkong_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-east-1:891377015455:targetgroup/hongkong-target-group/b1724e9fb4e4be0b",
            "arn_suffix": "targetgroup/hongkong-target-group/b1724e9fb4e4be0b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-east-1:891377015455:targetgroup/hongkong-target-group/b1724e9fb4e4be0b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-east-1:891377015455:loadbalancer/app/hongkong-load-balancer/cdd1ebeab14de1e2"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "hongkong-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "HongKongTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "HongKongTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08bf559094d3fb878"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "london_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:891377015455:targetgroup/london-target-group/4c8b883f44460421",
            "arn_suffix": "targetgroup/london-target-group/4c8b883f44460421",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:891377015455:targetgroup/london-target-group/4c8b883f44460421",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:891377015455:loadbalancer/app/london-load-balancer/1f6525d0ca61747c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "london-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "LondonTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "LondonTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05ed4e1ff86501dfa"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "newyork_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377015455:targetgroup/newyork-target-group/bf7e51252a07b5df",
            "arn_suffix": "targetgroup/newyork-target-group/bf7e51252a07b5df",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377015455:targetgroup/newyork-target-group/bf7e51252a07b5df",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:891377015455:loadbalancer/app/newyork-load-balancer/b9c1fe0e3f8a9b35"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "newyork-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "NewYorkTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "NewYorkTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f7677ebe95c66171"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "saopaulo_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:891377015455:targetgroup/saopaulo-target-group/c6323014db70cf7a",
            "arn_suffix": "targetgroup/saopaulo-target-group/c6323014db70cf7a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:891377015455:targetgroup/saopaulo-target-group/c6323014db70cf7a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:sa-east-1:891377015455:loadbalancer/app/saopaulo-load-balancer/9af723924648da0d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "saopaulo-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "SaoPauloTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "SaoPauloTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ff2d6be8de23a836"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tokyo_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:891377015455:targetgroup/tokyo-target-group/fd399e49f7ca14aa",
            "arn_suffix": "targetgroup/tokyo-target-group/fd399e49f7ca14aa",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:891377015455:targetgroup/tokyo-target-group/fd399e49f7ca14aa",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:891377015455:loadbalancer/app/tokyo-load-balancer/4a8f85be258a6a65"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tokyo-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "TokyoTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "TokyoTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0633f5cea1e6f2bef"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tokyotesta_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:891377015455:targetgroup/tokyotesta-target-group/9a91513633817c92",
            "arn_suffix": "targetgroup/tokyotesta-target-group/9a91513633817c92",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:891377015455:targetgroup/tokyotesta-target-group/9a91513633817c92",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tokyotesta-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "TokyoTestTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "TokyoTestTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0af671a3780a305aa"
          },
          "dependencies": [
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "australia-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009d97ac178787801",
            "association_id": "eipassoc-0f83706e075fb22a3",
            "connectivity_type": "public",
            "id": "nat-074763f73d02f40d3",
            "network_interface_id": "eni-07658870adcba39ce",
            "private_ip": "172.22.1.161",
            "public_ip": "3.106.105.98",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0808456457990ecc1",
            "tags": {
              "Name": "australia-nat"
            },
            "tags_all": {
              "Name": "australia-nat"
            }
          },
          "dependencies": [
            "aws_eip.australia-nat",
            "aws_internet_gateway.australia-igw",
            "aws_subnet.australia-public-subnet-2a",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "california-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014ee5a4301aff24c",
            "association_id": "eipassoc-0fde93d94a2117c3e",
            "connectivity_type": "public",
            "id": "nat-08e1d270e96c7bdc8",
            "network_interface_id": "eni-00c8306fca4ae98ee",
            "private_ip": "172.24.1.178",
            "public_ip": "54.183.103.143",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00a4fcf08608fdf2b",
            "tags": {
              "Name": "california-nat"
            },
            "tags_all": {
              "Name": "california-nat"
            }
          },
          "dependencies": [
            "aws_eip.california-nat",
            "aws_internet_gateway.california-igw",
            "aws_subnet.california-public-subnet-1a",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "hongkong-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07455061a31b8dd01",
            "association_id": "eipassoc-0a837ce10885ac991",
            "connectivity_type": "public",
            "id": "nat-0f7496a35ad8442c3",
            "network_interface_id": "eni-0590d83960df6b61a",
            "private_ip": "172.23.1.106",
            "public_ip": "43.198.52.49",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ebe52539547824af",
            "tags": {
              "Name": "hongkong-nat"
            },
            "tags_all": {
              "Name": "hongkong-nat"
            }
          },
          "dependencies": [
            "aws_eip.hongkong-nat",
            "aws_internet_gateway.hongkong-igw",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "london-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0358eea374941f67e",
            "association_id": "eipassoc-0325c06cfef3a0f81",
            "connectivity_type": "public",
            "id": "nat-0a4ab10cfc30963f6",
            "network_interface_id": "eni-0789121893742d76a",
            "private_ip": "172.20.1.129",
            "public_ip": "3.10.112.40",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0360c81fc81758e69",
            "tags": {
              "Name": "london_nat"
            },
            "tags_all": {
              "Name": "london_nat"
            }
          },
          "dependencies": [
            "aws_eip.london-nat",
            "aws_internet_gateway.london-igw",
            "aws_subnet.london-public-subnet-2a",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "newyork-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06699c329afdfaa9c",
            "association_id": "eipassoc-0449529d7bf23f4bc",
            "connectivity_type": "public",
            "id": "nat-0d06a27adc118d29e",
            "network_interface_id": "eni-0dc1ed84ed5f72c99",
            "private_ip": "172.19.1.155",
            "public_ip": "100.28.38.138",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0240fbebee16e8668",
            "tags": {
              "Name": "newyork-nat"
            },
            "tags_all": {
              "Name": "newyork-nat"
            }
          },
          "dependencies": [
            "aws_eip.newyork-nat",
            "aws_internet_gateway.newyork-igw",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "saopaulo-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084e20af5c5807900",
            "association_id": "eipassoc-0c2fa9974807077ca",
            "connectivity_type": "public",
            "id": "nat-08dce084caac50811",
            "network_interface_id": "eni-0d37fd20d75513c27",
            "private_ip": "172.21.1.54",
            "public_ip": "54.94.137.145",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05559927749ecc1ff",
            "tags": {
              "Name": "saopaulo-nat"
            },
            "tags_all": {
              "Name": "saopaulo-nat"
            }
          },
          "dependencies": [
            "aws_eip.saopaulo-nat",
            "aws_internet_gateway.saopaulo-igw",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tokyo-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-095787ee5670b6ea0",
            "association_id": "eipassoc-0e86a7f127d21ed7e",
            "connectivity_type": "public",
            "id": "nat-089a0251f981401b4",
            "network_interface_id": "eni-0cf0b82839b69c71d",
            "private_ip": "172.18.1.206",
            "public_ip": "52.195.129.218",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-086c4615be619ab9b",
            "tags": {
              "Name": "tokyo-nat"
            },
            "tags_all": {
              "Name": "tokyo-nat"
            }
          },
          "dependencies": [
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tokyotest-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e783727d5f177699",
            "association_id": "eipassoc-09c1a81e4ecf43147",
            "connectivity_type": "public",
            "id": "nat-073457ea5d5f19ca4",
            "network_interface_id": "eni-0eb2ef49344b7250a",
            "private_ip": "172.26.4.25",
            "public_ip": "52.192.29.180",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0422ffd0bb67953c2",
            "tags": {
              "Name": "tokyotest-nat"
            },
            "tags_all": {
              "Name": "tokyotest-nat"
            }
          },
          "dependencies": [
            "aws_eip.tokyotest-nat",
            "aws_internet_gateway.tokyotest-igw",
            "aws_subnet.tokyotest-public-subnet-1d",
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "newyork_vpc_to_tokyo_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.18.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b7a4ad75200a82443557707546",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b7a4ad75200a8244",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-029e50f0230e69600",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw",
            "aws_eip.newyork-nat",
            "aws_internet_gateway.newyork-igw",
            "aws_nat_gateway.newyork-nat",
            "aws_route_table.newyork-private",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "australia-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377015455:route-table/rtb-04bdc73b9738c86d6",
            "id": "rtb-04bdc73b9738c86d6",
            "owner_id": "891377015455",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-074763f73d02f40d3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-Australia-private-rtb"
            },
            "tags_all": {
              "Name": "PROD-Australia-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-013263bb6a00abef0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.australia-nat",
            "aws_internet_gateway.australia-igw",
            "aws_nat_gateway.australia-nat",
            "aws_subnet.australia-public-subnet-2a",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "australia-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377015455:route-table/rtb-02f10d668fdcf9d3a",
            "id": "rtb-02f10d668fdcf9d3a",
            "owner_id": "891377015455",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ccb612c6f3257ce",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-Australia-public-rtb"
            },
            "tags_all": {
              "Name": "PROD-Australia-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-013263bb6a00abef0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.australia-igw",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "california-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:891377015455:route-table/rtb-09b823b0df0d8c886",
            "id": "rtb-09b823b0df0d8c886",
            "owner_id": "891377015455",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08e1d270e96c7bdc8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-Califonia-private-rtb"
            },
            "tags_all": {
              "Name": "PROD-Califonia-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-054e8200544af02ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.california-nat",
            "aws_internet_gateway.california-igw",
            "aws_nat_gateway.california-nat",
            "aws_subnet.california-public-subnet-1a",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "california-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:891377015455:route-table/rtb-0b552532f3f597063",
            "id": "rtb-0b552532f3f597063",
            "owner_id": "891377015455",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0905d6c967096f7ed",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-Califonia-public-rtb"
            },
            "tags_all": {
              "Name": "PROD-Califonia-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-054e8200544af02ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.california-igw",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hongkong-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:891377015455:route-table/rtb-00f693719b138741b",
            "id": "rtb-00f693719b138741b",
            "owner_id": "891377015455",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f7496a35ad8442c3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-Hongkong-private-rtb"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bf559094d3fb878"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.hongkong-nat",
            "aws_internet_gateway.hongkong-igw",
            "aws_nat_gateway.hongkong-nat",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hongkong-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:891377015455:route-table/rtb-0ca125be6b7cdfd50",
            "id": "rtb-0ca125be6b7cdfd50",
            "owner_id": "891377015455",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0084eb534224306b6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-Hongkong-public-rtb"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bf559094d3fb878"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hongkong-igw",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "london-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377015455:route-table/rtb-0cf4122bb866baa37",
            "id": "rtb-0cf4122bb866baa37",
            "owner_id": "891377015455",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a4ab10cfc30963f6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-London-private-rtb"
            },
            "tags_all": {
              "Name": "PROD-London-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ed4e1ff86501dfa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.london-nat",
            "aws_internet_gateway.london-igw",
            "aws_nat_gateway.london-nat",
            "aws_subnet.london-public-subnet-2a",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "london-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377015455:route-table/rtb-0e37f61180a4b0504",
            "id": "rtb-0e37f61180a4b0504",
            "owner_id": "891377015455",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05b7b0d5393f78231",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-London-public-rtb"
            },
            "tags_all": {
              "Name": "PROD-London-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ed4e1ff86501dfa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.london-igw",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "newyork-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377015455:route-table/rtb-0b7a4ad75200a8244",
            "id": "rtb-0b7a4ad75200a8244",
            "owner_id": "891377015455",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d06a27adc118d29e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f7677ebe95c66171"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.newyork-nat",
            "aws_internet_gateway.newyork-igw",
            "aws_nat_gateway.newyork-nat",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "newyork-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377015455:route-table/rtb-0929302bcbb87b409",
            "id": "rtb-0929302bcbb87b409",
            "owner_id": "891377015455",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06fdde9e79e1d31f0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f7677ebe95c66171"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.newyork-igw",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "saopaulo-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377015455:route-table/rtb-042237fe70300858e",
            "id": "rtb-042237fe70300858e",
            "owner_id": "891377015455",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08dce084caac50811",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-Saup-Paulo-private-rtb"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff2d6be8de23a836"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.saopaulo-nat",
            "aws_internet_gateway.saopaulo-igw",
            "aws_nat_gateway.saopaulo-nat",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "saopaulo-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377015455:route-table/rtb-0992c54484b3863ea",
            "id": "rtb-0992c54484b3863ea",
            "owner_id": "891377015455",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a23094415d86d9b0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-Saup-Paulo-public-rtb"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff2d6be8de23a836"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.saopaulo-igw",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tokyo-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377015455:route-table/rtb-02025e92c3354fb68",
            "id": "rtb-02025e92c3354fb68",
            "owner_id": "891377015455",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-089a0251f981401b4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.19.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-04b5e653d11d57c0b",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-Tokyo-private-rtb"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0633f5cea1e6f2bef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_nat_gateway.tokyo-nat",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tokyo-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377015455:route-table/rtb-0efda11c250c1adf4",
            "id": "rtb-0efda11c250c1adf4",
            "owner_id": "891377015455",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f937aaedad55b537",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.19.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-04b5e653d11d57c0b",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-Tokyo-public-rtb"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0633f5cea1e6f2bef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_internet_gateway.tokyo-igw",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tokyotest-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377015455:route-table/rtb-007209a56d1f8ebfe",
            "id": "rtb-007209a56d1f8ebfe",
            "owner_id": "891377015455",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-073457ea5d5f19ca4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TEST-Tokyo-private-rtb"
            },
            "tags_all": {
              "Name": "TEST-Tokyo-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af671a3780a305aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.tokyotest-nat",
            "aws_internet_gateway.tokyotest-igw",
            "aws_nat_gateway.tokyotest-nat",
            "aws_subnet.tokyotest-public-subnet-1d",
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tokyotest-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377015455:route-table/rtb-0440ba8233f0437ec",
            "id": "rtb-0440ba8233f0437ec",
            "owner_id": "891377015455",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d539278b7d116894",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TEST-Tokyo-public-rtb"
            },
            "tags_all": {
              "Name": "TEST-Tokyo-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af671a3780a305aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tokyotest-igw",
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "australia-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c28e1aad7c905f9",
            "route_table_id": "rtb-04bdc73b9738c86d6",
            "subnet_id": "subnet-0d37ec2a39145c013"
          },
          "dependencies": [
            "aws_eip.australia-nat",
            "aws_internet_gateway.australia-igw",
            "aws_nat_gateway.australia-nat",
            "aws_route_table.australia-private",
            "aws_subnet.australia-private-subnet-2a",
            "aws_subnet.australia-public-subnet-2a",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "australia-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c28e1aad7c905f9",
            "route_table_id": "rtb-04bdc73b9738c86d6",
            "subnet_id": "subnet-0d37ec2a39145c013"
          },
          "dependencies": [
            "aws_eip.australia-nat",
            "aws_internet_gateway.australia-igw",
            "aws_nat_gateway.australia-nat",
            "aws_route_table.australia-private",
            "aws_subnet.australia-private-subnet-2a",
            "aws_subnet.australia-public-subnet-2a",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "australia-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0916b7ea874fb3509",
            "route_table_id": "rtb-02f10d668fdcf9d3a",
            "subnet_id": "subnet-0808456457990ecc1"
          },
          "dependencies": [
            "aws_internet_gateway.australia-igw",
            "aws_route_table.australia-public",
            "aws_subnet.australia-public-subnet-2a",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "australia-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dc862694f1d7560",
            "route_table_id": "rtb-02f10d668fdcf9d3a",
            "subnet_id": "subnet-0dfd8f1d84d941da7"
          },
          "dependencies": [
            "aws_internet_gateway.australia-igw",
            "aws_route_table.australia-public",
            "aws_subnet.australia-public-subnet-2b",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "california-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03189cbf54866133b",
            "route_table_id": "rtb-09b823b0df0d8c886",
            "subnet_id": "subnet-0575a80029f588dcc"
          },
          "dependencies": [
            "aws_eip.california-nat",
            "aws_internet_gateway.california-igw",
            "aws_nat_gateway.california-nat",
            "aws_route_table.california-private",
            "aws_subnet.california-private-subnet-1a",
            "aws_subnet.california-public-subnet-1a",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "california-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0accae7d73311f760",
            "route_table_id": "rtb-09b823b0df0d8c886",
            "subnet_id": "subnet-0e4921c325ecddfb0"
          },
          "dependencies": [
            "aws_eip.california-nat",
            "aws_internet_gateway.california-igw",
            "aws_nat_gateway.california-nat",
            "aws_route_table.california-private",
            "aws_subnet.california-private-subnet-1b",
            "aws_subnet.california-public-subnet-1a",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "california-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0849d1ba2e0935bf6",
            "route_table_id": "rtb-0b552532f3f597063",
            "subnet_id": "subnet-00a4fcf08608fdf2b"
          },
          "dependencies": [
            "aws_internet_gateway.california-igw",
            "aws_route_table.california-public",
            "aws_subnet.california-public-subnet-1a",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "california-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ceb3c4be53b2f271",
            "route_table_id": "rtb-0b552532f3f597063",
            "subnet_id": "subnet-011c98a134061e37a"
          },
          "dependencies": [
            "aws_internet_gateway.california-igw",
            "aws_route_table.california-public",
            "aws_subnet.california-public-subnet-1b",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hong-kong-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0327b37d4935bf798",
            "route_table_id": "rtb-0ca125be6b7cdfd50",
            "subnet_id": "subnet-0358b9addd62bbfc8"
          },
          "dependencies": [
            "aws_internet_gateway.hongkong-igw",
            "aws_route_table.hongkong-public",
            "aws_subnet.hongkong-public-subnet-1b",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hongkong-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df76866c1f4a0ff4",
            "route_table_id": "rtb-00f693719b138741b",
            "subnet_id": "subnet-0774e4142954198b7"
          },
          "dependencies": [
            "aws_eip.hongkong-nat",
            "aws_internet_gateway.hongkong-igw",
            "aws_nat_gateway.hongkong-nat",
            "aws_route_table.hongkong-private",
            "aws_subnet.hongkong-private-subnet-1a",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hongkong-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2cb4389a47b0a31",
            "route_table_id": "rtb-00f693719b138741b",
            "subnet_id": "subnet-02069ccb4503e35f4"
          },
          "dependencies": [
            "aws_eip.hongkong-nat",
            "aws_internet_gateway.hongkong-igw",
            "aws_nat_gateway.hongkong-nat",
            "aws_route_table.hongkong-private",
            "aws_subnet.hongkong-private-subnet-1b",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hongkong-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfb8c3f867b81152",
            "route_table_id": "rtb-0ca125be6b7cdfd50",
            "subnet_id": "subnet-0ebe52539547824af"
          },
          "dependencies": [
            "aws_internet_gateway.hongkong-igw",
            "aws_route_table.hongkong-public",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "london-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d57337515e735382",
            "route_table_id": "rtb-0cf4122bb866baa37",
            "subnet_id": "subnet-06bbb3384c984893d"
          },
          "dependencies": [
            "aws_eip.london-nat",
            "aws_internet_gateway.london-igw",
            "aws_nat_gateway.london-nat",
            "aws_route_table.london-private",
            "aws_subnet.london-private-subnet-2a",
            "aws_subnet.london-public-subnet-2a",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "london-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6e3412800e710e4",
            "route_table_id": "rtb-0cf4122bb866baa37",
            "subnet_id": "subnet-020909c3ef058579a"
          },
          "dependencies": [
            "aws_eip.london-nat",
            "aws_internet_gateway.london-igw",
            "aws_nat_gateway.london-nat",
            "aws_route_table.london-private",
            "aws_subnet.london-private-subnet-2b",
            "aws_subnet.london-public-subnet-2a",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "london-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093f7ed2387777aa1",
            "route_table_id": "rtb-0e37f61180a4b0504",
            "subnet_id": "subnet-0360c81fc81758e69"
          },
          "dependencies": [
            "aws_internet_gateway.london-igw",
            "aws_route_table.london-public",
            "aws_subnet.london-public-subnet-2a",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "london-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3e294b861c9170e",
            "route_table_id": "rtb-0e37f61180a4b0504",
            "subnet_id": "subnet-0fa049fa26863893c"
          },
          "dependencies": [
            "aws_internet_gateway.london-igw",
            "aws_route_table.london-public",
            "aws_subnet.london-public-subnet-2b",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "newyork-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd7c03205076a184",
            "route_table_id": "rtb-0b7a4ad75200a8244",
            "subnet_id": "subnet-09dcf6a94b05ff178"
          },
          "dependencies": [
            "aws_eip.newyork-nat",
            "aws_internet_gateway.newyork-igw",
            "aws_nat_gateway.newyork-nat",
            "aws_route_table.newyork-private",
            "aws_subnet.newyork-private-subnet-1a",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "newyork-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013256ddc9a99ac74",
            "route_table_id": "rtb-0b7a4ad75200a8244",
            "subnet_id": "subnet-0ffe888ffca5a68f2"
          },
          "dependencies": [
            "aws_eip.newyork-nat",
            "aws_internet_gateway.newyork-igw",
            "aws_nat_gateway.newyork-nat",
            "aws_route_table.newyork-private",
            "aws_subnet.newyork-private-subnet-1b",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "newyork-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ca1ba9d812db64b",
            "route_table_id": "rtb-0929302bcbb87b409",
            "subnet_id": "subnet-0240fbebee16e8668"
          },
          "dependencies": [
            "aws_internet_gateway.newyork-igw",
            "aws_route_table.newyork-public",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "newyork-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a2bce1160899d32",
            "route_table_id": "rtb-0929302bcbb87b409",
            "subnet_id": "subnet-0b599cb2d97f1b5e9"
          },
          "dependencies": [
            "aws_internet_gateway.newyork-igw",
            "aws_route_table.newyork-public",
            "aws_subnet.newyork-public-subnet-1b",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sao-paulo-public-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05967e4a082bd0e8f",
            "route_table_id": "rtb-0992c54484b3863ea",
            "subnet_id": "subnet-036615ff2e0ccf934"
          },
          "dependencies": [
            "aws_internet_gateway.saopaulo-igw",
            "aws_route_table.saopaulo-public",
            "aws_subnet.saopaulo-public-subnet-1c",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "saopaulo-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08580a73af3c49818",
            "route_table_id": "rtb-042237fe70300858e",
            "subnet_id": "subnet-0116013e81d739189"
          },
          "dependencies": [
            "aws_eip.saopaulo-nat",
            "aws_internet_gateway.saopaulo-igw",
            "aws_nat_gateway.saopaulo-nat",
            "aws_route_table.saopaulo-private",
            "aws_subnet.saopaulo-private-subnet-1a",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "saopaulo-private-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d67c5d3f95eeb519",
            "route_table_id": "rtb-042237fe70300858e",
            "subnet_id": "subnet-073c8472202fcf835"
          },
          "dependencies": [
            "aws_eip.saopaulo-nat",
            "aws_internet_gateway.saopaulo-igw",
            "aws_nat_gateway.saopaulo-nat",
            "aws_route_table.saopaulo-private",
            "aws_subnet.saopaulo-private-subnet-1c",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "saopaulo-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0356b023620c8c2f6",
            "route_table_id": "rtb-0992c54484b3863ea",
            "subnet_id": "subnet-05559927749ecc1ff"
          },
          "dependencies": [
            "aws_internet_gateway.saopaulo-igw",
            "aws_route_table.saopaulo-public",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c25ccf2586462bfc",
            "route_table_id": "rtb-02025e92c3354fb68",
            "subnet_id": "subnet-04a74d8e2a2cab33c"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_nat_gateway.tokyo-nat",
            "aws_route_table.tokyo-private",
            "aws_subnet.tokyo-private-subnet-1a",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-private-d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4f9a2f4e17bfc4b",
            "route_table_id": "rtb-02025e92c3354fb68",
            "subnet_id": "subnet-0bef8118878350ab2"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_nat_gateway.tokyo-nat",
            "aws_route_table.tokyo-private",
            "aws_subnet.tokyo-private-subnet-1d",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd43aa632d2124b6",
            "route_table_id": "rtb-0efda11c250c1adf4",
            "subnet_id": "subnet-086c4615be619ab9b"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_internet_gateway.tokyo-igw",
            "aws_route_table.tokyo-public",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-public-d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ee90f5a1f542aaa",
            "route_table_id": "rtb-0efda11c250c1adf4",
            "subnet_id": "subnet-0f54bae4d8c14f26b"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_internet_gateway.tokyo-igw",
            "aws_route_table.tokyo-public",
            "aws_subnet.tokyo-public-subnet-1d",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyotest-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c37a313bf68f6242",
            "route_table_id": "rtb-007209a56d1f8ebfe",
            "subnet_id": "subnet-036d436753c9d67db"
          },
          "dependencies": [
            "aws_eip.tokyotest-nat",
            "aws_internet_gateway.tokyotest-igw",
            "aws_nat_gateway.tokyotest-nat",
            "aws_route_table.tokyotest-private",
            "aws_subnet.tokyotest-private-subnet-1d",
            "aws_subnet.tokyotest-public-subnet-1d",
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyotest-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069eaa357aa234dbe",
            "route_table_id": "rtb-0440ba8233f0437ec",
            "subnet_id": "subnet-0422ffd0bb67953c2"
          },
          "dependencies": [
            "aws_internet_gateway.tokyotest-igw",
            "aws_route_table.tokyotest-public",
            "aws_subnet.tokyotest-public-subnet-1d",
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "australia-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377015455:security-group/sg-0383e611cc1fbf76e",
            "description": "australia-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0383e611cc1fbf76e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "australia-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "891377015455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "australia-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "australia-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-013263bb6a00abef0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.australia-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "australia-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377015455:security-group/sg-0115deb419306e3a8",
            "description": "australia-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0115deb419306e3a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "australia-SG02-LB01",
            "name_prefix": "",
            "owner_id": "891377015455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "australia-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "australia-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-013263bb6a00abef0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "california-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:891377015455:security-group/sg-092938469bb436a56",
            "description": "california-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092938469bb436a56",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "california-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "891377015455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "california-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "california-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-054e8200544af02ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.california-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "california-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:891377015455:security-group/sg-002f1da12f5033988",
            "description": "california-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002f1da12f5033988",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "california-SG02-LB01",
            "name_prefix": "",
            "owner_id": "891377015455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "california-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "california-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-054e8200544af02ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hongkong-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:891377015455:security-group/sg-03021c3b9d962d9e0",
            "description": "hongkong-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03021c3b9d962d9e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hongkong-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "891377015455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hongkong-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "hongkong-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bf559094d3fb878"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hongkong-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:891377015455:security-group/sg-00bfcee7bd9545207",
            "description": "hongkong-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bfcee7bd9545207",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hongkong-SG02-LB01",
            "name_prefix": "",
            "owner_id": "891377015455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hongkong-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "hongkong-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bf559094d3fb878"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "london-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377015455:security-group/sg-0e875fdf5dffc2d51",
            "description": "london-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e875fdf5dffc2d51",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "london-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "891377015455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "london-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "london-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ed4e1ff86501dfa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.london-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "london-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377015455:security-group/sg-05862091b2571d24f",
            "description": "london-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05862091b2571d24f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "london-SG02-LB01",
            "name_prefix": "",
            "owner_id": "891377015455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "london-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "london-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ed4e1ff86501dfa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "newyork-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377015455:security-group/sg-0b98e28ad900cf96e",
            "description": "newyork-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b98e28ad900cf96e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "newyork-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "891377015455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "newyork-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "newyork-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7677ebe95c66171"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "newyork-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377015455:security-group/sg-07dd3fe4a4eb5b3f4",
            "description": "newyork-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07dd3fe4a4eb5b3f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "newyork-SG02-LB01",
            "name_prefix": "",
            "owner_id": "891377015455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "newyork-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "newyork-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7677ebe95c66171"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "saopaulo-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377015455:security-group/sg-09f6032c77aab0ed3",
            "description": "saopaulo-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f6032c77aab0ed3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "saopaulo-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "891377015455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sao-paulo-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "sao-paulo-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff2d6be8de23a836"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "saopaulo-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377015455:security-group/sg-02a6c3e1a21144221",
            "description": "saopaulo-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a6c3e1a21144221",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "saopaulo-SG02-LB01",
            "name_prefix": "",
            "owner_id": "891377015455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sao-paulo-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "sao-paulo-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff2d6be8de23a836"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tokyo-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377015455:security-group/sg-0a791c1fa946bff45",
            "description": "tokyo-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a791c1fa946bff45",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tokyo-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "891377015455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyo-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "tokyo-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0633f5cea1e6f2bef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tokyo-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377015455:security-group/sg-00c535a2bb5333243",
            "description": "tokyo-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c535a2bb5333243",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tokyo-SG02-LB01",
            "name_prefix": "",
            "owner_id": "891377015455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyo-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "tokyo-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0633f5cea1e6f2bef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tokyotest-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377015455:security-group/sg-0a9bc461d292cfea8",
            "description": "tokyo-test-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9bc461d292cfea8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tokyo-test-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "891377015455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyotest-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "tokyotest-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af671a3780a305aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tokyotest-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377015455:security-group/sg-0e21d5f101755afb7",
            "description": "tokyo-test-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e21d5f101755afb7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tokyo-test-SG02-LB01",
            "name_prefix": "",
            "owner_id": "891377015455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyotest-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "tokyotest-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af671a3780a305aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "australia-private-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377015455:subnet/subnet-0d37ec2a39145c013",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.22.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d37ec2a39145c013",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Australia-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Australia-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-013263bb6a00abef0"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "australia-private-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377015455:subnet/subnet-05be44ffd2cb8c77f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.22.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05be44ffd2cb8c77f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Australia-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Australia-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-013263bb6a00abef0"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "australia-public-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377015455:subnet/subnet-0808456457990ecc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.22.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0808456457990ecc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Australia-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Australia-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-013263bb6a00abef0"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "australia-public-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377015455:subnet/subnet-0dfd8f1d84d941da7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.22.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfd8f1d84d941da7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Australia-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Australia-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-013263bb6a00abef0"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "california-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:891377015455:subnet/subnet-0575a80029f588dcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.24.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0575a80029f588dcc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Califonia-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Califonia-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-054e8200544af02ab"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "california-private-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:891377015455:subnet/subnet-0e4921c325ecddfb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.24.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4921c325ecddfb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Califonia-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Califonia-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-054e8200544af02ab"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "california-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:891377015455:subnet/subnet-00a4fcf08608fdf2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.24.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a4fcf08608fdf2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Califonia-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Califonia-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-054e8200544af02ab"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "california-public-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:891377015455:subnet/subnet-011c98a134061e37a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.24.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011c98a134061e37a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Califonia-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Califonia-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-054e8200544af02ab"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hongkong-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:891377015455:subnet/subnet-0774e4142954198b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "cidr_block": "172.23.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0774e4142954198b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Hongkong-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-08bf559094d3fb878"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hongkong-private-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:891377015455:subnet/subnet-02069ccb4503e35f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1b",
            "availability_zone_id": "ape1-az2",
            "cidr_block": "172.23.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02069ccb4503e35f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Hongkong-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-08bf559094d3fb878"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hongkong-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:891377015455:subnet/subnet-0ebe52539547824af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "cidr_block": "172.23.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebe52539547824af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Hongkong-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-08bf559094d3fb878"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hongkong-public-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:891377015455:subnet/subnet-0358b9addd62bbfc8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1b",
            "availability_zone_id": "ape1-az2",
            "cidr_block": "172.23.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0358b9addd62bbfc8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Hongkong-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-08bf559094d3fb878"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "london-private-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377015455:subnet/subnet-06bbb3384c984893d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bbb3384c984893d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-London-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-London-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-05ed4e1ff86501dfa"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "london-private-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377015455:subnet/subnet-020909c3ef058579a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.20.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020909c3ef058579a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-London-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-London-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-05ed4e1ff86501dfa"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "london-public-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377015455:subnet/subnet-0360c81fc81758e69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0360c81fc81758e69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-London-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-London-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-05ed4e1ff86501dfa"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "london-public-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377015455:subnet/subnet-0fa049fa26863893c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa049fa26863893c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-New York-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-05ed4e1ff86501dfa"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "newyork-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377015455:subnet/subnet-09dcf6a94b05ff178",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.19.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09dcf6a94b05ff178",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-New York-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0f7677ebe95c66171"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "newyork-private-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377015455:subnet/subnet-0ffe888ffca5a68f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.19.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffe888ffca5a68f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-New York-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0f7677ebe95c66171"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "newyork-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377015455:subnet/subnet-0240fbebee16e8668",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.19.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0240fbebee16e8668",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-New York-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0f7677ebe95c66171"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "newyork-public-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377015455:subnet/subnet-0b599cb2d97f1b5e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.19.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b599cb2d97f1b5e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-New York-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0f7677ebe95c66171"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "saopaulo-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377015455:subnet/subnet-0116013e81d739189",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "172.21.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0116013e81d739189",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Saup-Paulo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0ff2d6be8de23a836"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "saopaulo-private-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377015455:subnet/subnet-073c8472202fcf835",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "172.21.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073c8472202fcf835",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Saup-Paulo-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0ff2d6be8de23a836"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "saopaulo-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377015455:subnet/subnet-05559927749ecc1ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "172.21.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05559927749ecc1ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Saup-Paulo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0ff2d6be8de23a836"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "saopaulo-public-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377015455:subnet/subnet-036615ff2e0ccf934",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "172.21.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036615ff2e0ccf934",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Saup-Paulo-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0ff2d6be8de23a836"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377015455:subnet/subnet-04a74d8e2a2cab33c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.18.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a74d8e2a2cab33c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0633f5cea1e6f2bef"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo-private-subnet-1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377015455:subnet/subnet-0bef8118878350ab2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "172.18.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bef8118878350ab2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Tokyo-subnet-1d",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-subnet-1d",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0633f5cea1e6f2bef"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377015455:subnet/subnet-086c4615be619ab9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.18.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086c4615be619ab9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0633f5cea1e6f2bef"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo-public-subnet-1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377015455:subnet/subnet-0f54bae4d8c14f26b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "172.18.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f54bae4d8c14f26b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Tokyo-subnet-1d",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-subnet-1d",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0633f5cea1e6f2bef"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyotest-private-subnet-1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377015455:subnet/subnet-036d436753c9d67db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "172.26.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036d436753c9d67db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TEST-Tokyo-subnet-1d",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "TEST-Tokyo-subnet-1d",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0af671a3780a305aa"
          },
          "dependencies": [
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyotest-public-subnet-1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377015455:subnet/subnet-0422ffd0bb67953c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.26.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0422ffd0bb67953c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377015455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TEST-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "TEST-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0af671a3780a305aa"
          },
          "dependencies": [
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "australia-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377015455:vpc/vpc-013263bb6a00abef0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.22.0.0/16",
            "default_network_acl_id": "acl-0c05886f5669bb678",
            "default_route_table_id": "rtb-053b288873a326f73",
            "default_security_group_id": "sg-01ab8c3f69a60f028",
            "dhcp_options_id": "dopt-0bddcbb22cf623994",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-013263bb6a00abef0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-053b288873a326f73",
            "owner_id": "891377015455",
            "tags": {
              "Name": "PROD-Australia-vpc"
            },
            "tags_all": {
              "Name": "PROD-Australia-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "california-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:891377015455:vpc/vpc-054e8200544af02ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.24.0.0/16",
            "default_network_acl_id": "acl-0833081968376e721",
            "default_route_table_id": "rtb-0977a3feee74f8b94",
            "default_security_group_id": "sg-097743e9b07f9e180",
            "dhcp_options_id": "dopt-08e9bef6ae353d8cc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-054e8200544af02ab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0977a3feee74f8b94",
            "owner_id": "891377015455",
            "tags": {
              "Name": "PROD-Califonia-vpc"
            },
            "tags_all": {
              "Name": "PROD-Califonia-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hongkong-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:891377015455:vpc/vpc-08bf559094d3fb878",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.23.0.0/16",
            "default_network_acl_id": "acl-02ef35499b4a1c440",
            "default_route_table_id": "rtb-0bdf60fe53d2fc01f",
            "default_security_group_id": "sg-0578262137917a875",
            "dhcp_options_id": "dopt-08b8139d2ff10855b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08bf559094d3fb878",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bdf60fe53d2fc01f",
            "owner_id": "891377015455",
            "tags": {
              "Name": "PROD-Hongkong-vpc"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "london-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377015455:vpc/vpc-05ed4e1ff86501dfa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-07ef6596d90a58b52",
            "default_route_table_id": "rtb-061fbec2a0f94b494",
            "default_security_group_id": "sg-08e2c4549486cf25b",
            "dhcp_options_id": "dopt-0db13058b6811fe60",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05ed4e1ff86501dfa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-061fbec2a0f94b494",
            "owner_id": "891377015455",
            "tags": {
              "Name": "PROD-London-vpc"
            },
            "tags_all": {
              "Name": "PROD-London-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "newyork-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377015455:vpc/vpc-0f7677ebe95c66171",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.19.0.0/16",
            "default_network_acl_id": "acl-029383d034a1272cd",
            "default_route_table_id": "rtb-08c27ff7425d1b354",
            "default_security_group_id": "sg-030bc7d97bab864eb",
            "dhcp_options_id": "dopt-0d92c2f652f3e2762",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f7677ebe95c66171",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08c27ff7425d1b354",
            "owner_id": "891377015455",
            "tags": {
              "Name": "PROD-New York-vpc"
            },
            "tags_all": {
              "Name": "PROD-New York-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "saopaulo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:891377015455:vpc/vpc-0ff2d6be8de23a836",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.21.0.0/16",
            "default_network_acl_id": "acl-0033aafceda62aa69",
            "default_route_table_id": "rtb-010870cb7d84f7eb7",
            "default_security_group_id": "sg-01a119db47aa5ea65",
            "dhcp_options_id": "dopt-0bdbaa2e30f59794b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff2d6be8de23a836",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-010870cb7d84f7eb7",
            "owner_id": "891377015455",
            "tags": {
              "Name": "PROD-Saup-Paulo-vpc"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tokyo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377015455:vpc/vpc-0633f5cea1e6f2bef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.18.0.0/16",
            "default_network_acl_id": "acl-0097e6c482ae9c87f",
            "default_route_table_id": "rtb-0998c524aa655c111",
            "default_security_group_id": "sg-0672d9a76c2660aab",
            "dhcp_options_id": "dopt-0aa6cd02467f43dfd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0633f5cea1e6f2bef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0998c524aa655c111",
            "owner_id": "891377015455",
            "tags": {
              "Name": "PROD-Tokyo-vpc"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tokyotest-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377015455:vpc/vpc-0af671a3780a305aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.26.0.0/16",
            "default_network_acl_id": "acl-0d75456bb5889b225",
            "default_route_table_id": "rtb-0081f700bc84eafa0",
            "default_security_group_id": "sg-0a4ff1a087ba296c4",
            "dhcp_options_id": "dopt-0aa6cd02467f43dfd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0af671a3780a305aa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0081f700bc84eafa0",
            "owner_id": "891377015455",
            "tags": {
              "Name": "TEST-Tokyo-vpc"
            },
            "tags_all": {
              "Name": "TEST-Tokyo-vpc"
            }
          }
        }
      ]
    }
  ]
}